--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <!--index.html-->
 <!--Par Albert Gblokpor-Koffi-->
 <!--Le 8-04-2020-->
@@ -8,138 +8,92 @@
     <title>Présentation </title>
 </head>
 <body>
-Bonjour , je me présente.
+<p>Bonjour, je me présente.</p>
 <br/>
-<img src="img/treblA.jpg" height="250" width="300"/>
+<img src="img/komlan_Quebec.png" height="550" width="800"/>
 
 <p> Je m'appelle komlan </p>
 <br/>
+<p>Mes principales caractéristiques sont :</p>
+<br/>
+<p id="debut">Accueil</p>
+<ol>
+    <a href="#etude"><h1><li>Mes études</li></h1></a>
+    <a href="#Sports"><h1><li>Mes sports</li></h1></a>
+    <a href="#Loisirs"><h1><li>Mes Loisirs </li></h1></a>
+    <a href="#reve"><h1><li>Mon rêve </li></h1></a>
 
-<a href="#etude">
-            <h1>Mes études</h1>
-        </a>
-<p> Étudiant au Cegep de trois rivière </p><br/>
+</ol>
 
-        <a href="#Sports">
-            <h1>Mes sports </h1>
-        </a>
-        <a href="#Loisirs">
-            <h1> Mes loisirs</h1>
-        </a>
-        <a href="#reve">
-            <h1>Mes rêves </h1>
-        </a>
 
+
+
+
+            <h2 id="etude">Mes études</h2>
+
+     <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+<p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+<p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+<p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+<p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+<p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+<p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+
+<a href="#debut"> Retour au début </a>
+            <h2 id="Sports">Mes sports </h2>
+
+            <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+                    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+<a href="#debut"> Retour au début </a>
+
+            <h2 id="Loisirs"> Mes loisirs</h2>
 
 <table>
     <tr>
-        <th>Regina</th>
-        <th>Lydia</th>
-        <th>Josée</th>
-        <th>Madeleine</th>
+        <th>Informatiques</th>
+        <th>Tourisme</th>
+        <th>Lecture</th>
     </tr>
     <tr>
-
+        <td><img src="img/enfant.jpeg"></td>
+        <td><img src="img/enfant.jpeg"></td>
+        <td><img src="img/enfant.jpeg"></td>
+    <tr>
+    <td><img src="img/enfant.jpeg"></td>
+    <td><img src="img/enfant.jpeg"></td>
+    <td><img src="img/enfant.jpeg"></td>
     </tr>
     <tr>
-
-    </tr>
-    <tr>
-
+        <td><img src="img/enfant.jpeg"></td>
+        <td><img src="img/enfant.jpeg"></td>
+        <td><img src="img/enfant.jpeg"></td>
     </tr>
 </table>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/><br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/><br/>
-<br/>
+<p>Cliquez <a target="_blank" href="https://www.voyagevoyage.ca/conseils/stations-ski-afrique-1.1623437">ici</a> pour voir mes autres centres d'intérêts.</p>
+<br/><br/><br/><br/>
 
 
-<h2 id="#etude"> Mes études </h2>
-<p> Je suis Albert. Je suis inscris dans le cours d'intégration web au cegep de trois rivière et je suis content de suivre ce cours. J'ai un professeur super gentil
-    <img src="img/diplome.jpg" height="526" width="1000" alt="Mon objectif pour les études " title=" graduation "
-    />
-</p>
-<h2 id="#Sports"> Mes sports préférés </h2>
+<a href="#debut"> Retour au début </a>
 
-        <img src="img/enfant.jpeg" height="163" width="309" alt="sport des enfants" title=" un enfant entrain de jouer au football"/>
-        <p> J'aime la natation, le basket et le soccer cliquez <a target="_blank" href="http://www.rfi.fr/fr/afrique-foot/20190718-can-2021-tirage-sort-eliminatoires-complet-cameroun"> ici  <a>pour voir mes autres sports
-</p>
-<h2 id="#Loisirs"> Mes loisirs</h2>
-<p> J'aime voyager et la lecture et bien évidemment l'informatique
-    <img src="img/afroleague.jpg" height="500" width="768" alt=" voyage voyage oh que tu me manques" title="Mon voyage de rêve"/></p>
-         <a target="_blank" href="https://www.voyagevoyage.ca/conseils/stations-ski-afrique-1.1623437">Mes autres loisirs</a>
+            <h2 id="reve">Mon rêve </h2>
+<p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+<p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+<p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+<p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+<p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+<p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+<p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
 
-        <table style="width:100%">
-            <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Age</th>
-            </tr>
-            <tr>
-                <td>Jill</td>
-                <td>Smith</td>
-                <td>50</td>
-            </tr>
-            <tr>
-                <td>Eve</td>
-                <td>Jackson</td>
-                <td>94</td>
-            </tr>
-        </table>
+<a href="#debut"> Retour au début </a>
 
 
-
-<h2 title="#reve"> Mes rêves </h2>
-<p> Mon plus grand rêve est de devenir un grand informaticien
-    <img src="img/plage.jpeg" height="198" width="255" alt="plage plage oh plage " title=" lage plage oh plage de mes reves"/></p>
-
-        Moi dans le futur
-        <img src="img/comique_info.jpg" height="418" width="408" alt="comique" title="Albert dans le futur"/><br/>
-
-Hello !!!
-
-<a target="_blank" href="https://fr.wikipedia.org/wiki/Université_pontificale_urbanienneulaval.ca"> Bienvenu sur le site de l'université Laval</a>
-
-<img src="Media/Anniveraire_Mario.jpg" height="750" width="1125" alt=" "/>
-
-
-
-<h2>  </h2>
 </body>
 </html>
