--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -10,7 +10,7 @@ f<!DOCTYPE html>
 <body>
 <p>Bonjour, je me présente.</p>
 <br/>
-<img src="img/komlan.jpg" height="550" width="800"/>
+<img src="img/Komlan.JPG" height="550" width="800"/>
 
 <p> Je m'appelle komlan </p>
 <br/>
