--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -1,6 +1,6 @@
-f<!DOCTYPE html>
+<!DOCTYPE html>
 <!--index.html-->
-<!--Par Albert Gblokpor-Koffi-->
+<!--Par Komlan Albert Gblokpor-Koffi-->
 <!--Le 8-04-2020-->
 
 <html lang="fr-ca" >
