--- a/JeMePresente/etudes.html
+++ b/JeMePresente/etudes.html
@@ -17,17 +17,17 @@
 </tr>
 <tr>
     <td>EPP TOKOIN ADJALLÉ</td>
-    <td><img src="img/enfant.jpeg"></td>
-    <td><img src="img/enfant.jpeg"></td>
+    <td>CEG TOKOIN NORD</td>
+    <td>JEAN PAUL II</td>
 <tr>
-    <td></td>
-    <td><img src="img/enfant.jpeg"></td>
-    <td><img src="img/enfant.jpeg"></td>
+    <td>TRAVAILLE EXEMPLAIRE</td>
+    <td>TOKOIN DOUMASSESSE</td>
+    <td>UCAO-UUT</td>
 </tr>
 <tr>
-    <td><img src="img/enfant.jpeg"></td>
-    <td><img src="img/enfant.jpeg"></td>
-    <td><img src="img/enfant.jpeg"></td>
+    <td>RIGUEUR</td>
+    <td>BON TRAVAIL</td>
+    <td>UNIVERSITÉ LAVAL</td>
 </tr>
 </table>
 </body>
