--- a/JeMePresente/OnePage.html
+++ b/JeMePresente/OnePage.html
@@ -8,69 +8,19 @@
 <title>Études </title>
 </head>
 <body>
-<p><h1>Mes Études </h1></p>
-<table>
-    <tr>
-        <th>Primaires</th>
-        <th>Secondaires</th>
-        <th>Universitaires</th>
-    </tr>
-    <tr>
-        <td>EPP TOKOIN ADJALLÉ</td>
-        <td>CEG TOKOIN NORD</td>
-        <td>JEAN PAUL II</td>
-    <tr>
-        <td>TRAVAILLE EXEMPLAIRE</td>
-        <td>TOKOIN DOUMASSESSE</td>
-        <td>UCAO-UUT</td>
-    </tr>
-    <tr>
-        <td>RIGUEUR</td>
-        <td>BON TRAVAIL</td>
-        <td>UNIVERSITÉ LAVAL</td>
-    </tr>
-</table>
-
 <p id="debut">Accueil</p>
 <ol>
-    <a href="#etude"><h1><li>Informatique</li></h1></a>
-    <a href="#Sports"><h1><li>Lectures </li></h1></a>
-    <a href="#Loisirs"><h1><li>Voyage</li></h1></a>
-    <a href="#reve"><h1><li>Film</li></h1></a>
+    <a href="#etude"><h1><li>Mes études</li></h1></a>
+
+    <a href="#Sports"><h1><li>Mes sports</li></h1></a>
+
+    <a href="#Loisirs"><h1><li>Mes Loisirs </li></h1></a>
+
+    <a href="#reve"><h1><li>Mon rêve </li></h1></a>
+
 
 </ol>
 
-<p id="debut">Accueil</p>
-<ol>
-    <a href="#etude"><h1><li>Informatique</li></h1></a>
-    <a href="#Sports"><h1><li>Lectures </li></h1></a>
-    <a href="#Loisirs"><h1><li>Voyage</li></h1></a>
-    <a href="#reve"><h1><li>Film</li></h1></a>
-
-</ol>
-
-<p><h1>Mes Sports</h1></p>
-<table>
-    <tr>
-        <th>Nom du sport</th>
-        <th>Secondaires</th>
-        <th>Universitaires</th>
-    </tr>
-    <tr>
-        <td>Soccer/td>
-        <td>CEG TOKOIN NORD</td>
-        <td>JEAN PAUL II</td>
-    <tr>
-        <td>Basket Ball</td>
-        <td>TOKOIN DOUMASSESSE</td>
-        <td>UCAO-UUT</td>
-    </tr>
-    <tr>
-        <td>Volley Ball</td>
-        <td>BON TRAVAIL</td>
-        <td>UNIVERSITÉ LAVAL</td>
-    </tr>
-</table>
 
 </body>
 </html>
