--- a/JeMePresente/OnePage.html
+++ b/JeMePresente/OnePage.html
@@ -8,9 +8,10 @@
 <title>Études </title>
 </head>
 <body>
+<section id="SectionMenu">
 <p id="debut">Accueil</p>
 <ol>
-    <a href="#etude"><h1><li>Mes études</li></h1></a>
+    <a href="#SectionEtudes"><h1><li>Mes études</li></h1></a>
 
     <a href="#Sports"><h1><li>Mes sports</li></h1></a>
 
@@ -18,6 +19,150 @@
 
     <a href="#reve"><h1><li>Mon rêve </li></h1></a>
 
+
+
+    <p>Bonjour, je me présente.</p>
+    <br/>
+    <img src="img/Komlan5.JPG" height="550" width="800"/>
+
+    <p> Je m'appelle komlan </p>
+    <br/>
+    <p>Mes principales caractéristiques sont :</p>
+    <br/>
+    <p id="debut">Accueil</p>
+    <ol>
+        <a href="#etude"><h1><li>Mes études</li></h1></a>
+        <a href="#SectionSports"><h1><li>Mes sports</li></h1></a>
+        <a href="#SectionLoisirsLoisirs"><h1><li>Mes Loisirs </li></h1></a>
+        <a href="#SectionReve"><h1><li>Mon rêve </li></h1></a>
+
+    </ol>
+
+</section>
+
+<section id="SectionEtudes">
+
+    <h2 id="etude">Mes études</h2>
+
+    <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+    <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+    <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+    <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+    <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+    <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+    <p> Étudiant au Cegep de trois rivière depuis le 6 avril 2020. Tous les lundis, j'ai un cours de design et les mercredis, j'ai le cours d'intégration  </p><br/>
+
+    <a href="#debut"> Retour au début </a>
+
+</section>
+<section id="SectionSports">
+    <h2 id="Sports">Mes sports </h2>
+
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <p> J'aime le Soccer, le Basket et la Natation </p><br/>
+    <a href="#debut"> Retour au début </a>
+</section>
+
+<section id="SectionLoisirs">
+    <h2 id="Loisirs"> Mes loisirs</h2>
+
+    <table>
+        <tr>
+            <th>Informatiques</th>
+            <th>Tourisme</th>
+            <th>Lecture</th>
+        </tr>
+        <tr>
+            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="img/enfant.jpeg"></td>
+        <tr>
+            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="img/enfant.jpeg"></td>
+        </tr>
+        <tr>
+            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="img/enfant.jpeg"></td>
+        </tr>
+    </table>
+    <p>Cliquez <a target="_blank" href="https://www.voyagevoyage.ca/conseils/stations-ski-afrique-1.1623437">ici</a> pour voir mes autres centres d'intérêts.</p>
+    <br/><br/><br/><br/>
+
+
+    <a href="#debut"> Retour au début </a>
+</section>
+
+<section id="SectionReve">
+
+    <h2 id="reve">Mon rêve </h2>
+    <p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+    <p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+    <p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+    <p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+    <p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+    <p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+    <p> Mon rêve est de devenir un jour créateur de bonheur dans le monde </p><br/>
+
+    <a href="#debut"> Retour au début </a>
+
+    p><h1>Mes Études </h1></p>
+    <table>
+        <tr>
+            <th>Primaires</th>
+            <th>Secondaires</th>
+            <th>Universitaires</th>
+        </tr>
+        <tr>
+            <td>EPP TOKOIN ADJALLÉ</td>
+            <td>CEG TOKOIN NORD</td>
+            <td>JEAN PAUL II</td>
+        <tr>
+            <td>TRAVAILLE EXEMPLAIRE</td>
+            <td>TOKOIN DOUMASSESSE</td>
+            <td>UCAO-UUT</td>
+        </tr>
+        <tr>
+            <td>RIGUEUR</td>
+            <td>BON TRAVAIL</td>
+            <td>UNIVERSITÉ LAVAL</td>
+        </tr>
+    </table>
+    <p id="debut">Accueil</p>
+    <ol>
+        <a href="#etude"><h1><li>Informatique</li></h1></a>
+        <a href="#Sports"><h1><li>Lectures </li></h1></a>
+        <a href="#Loisirs"><h1><li>Voyage</li></h1></a>
+        <a href="#reve"><h1><li>Film</li></h1></a>
+
+    </ol>
+    <p><h1>Mes Sports</h1></p>
+    <table>
+        <tr>
+            <th>Nom du sport</th>
+            <th>Position</th>
+            <th>Expérience</th>
+        </tr>
+        <tr>
+            <td>Soccer</td>
+            <td>Milieu</td>
+            <td>30 ans</td>
+        <tr>
+            <td>Lanceur</td>
+            <td>Arriere</td>
+            <td>20 ans </td>
+        </tr>
+
+    </table>
 
 </ol>
 
