--- a/JeMePresente/Sports.html
+++ b/JeMePresente/Sports.html
@@ -12,23 +12,19 @@
 <table>
     <tr>
         <th>Nom du sport</th>
-        <th>Secondaires</th>
-        <th>Universitaires</th>
+        <th>Position</th>
+        <th>Expérience</th>
     </tr>
     <tr>
-        <td>Soccer/td>
-        <td>CEG TOKOIN NORD</td>
-        <td>JEAN PAUL II</td>
+        <td>Soccer</td>
+        <td>Milieu</td>
+        <td>30 ans</td>
     <tr>
-        <td>Basket Ball</td>
-        <td>TOKOIN DOUMASSESSE</td>
-        <td>UCAO-UUT</td>
+        <td>Lanceur</td>
+        <td>Arriere</td>
+        <td>20 ans </td>
     </tr>
-    <tr>
-        <td>Volley Ball</td>
-        <td>BON TRAVAIL</td>
-        <td>UNIVERSITÉ LAVAL</td>
-    </tr>
+
 </table>
 
 </body>
