--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -4,8 +4,10 @@
 <!--Le 8-04-2020-->
 
 <html lang="fr-ca" >
-    <meta charset="UTF-8">
+<link rel="stylesheet" href="CSS/style.css">
+<meta charset="UTF-8">
     <title>Présentation </title>
+
 </head>
 <body>
 <p>Bonjour, je me présente.</p>
