--- a/JeMePresente/OnePage.html
+++ b/JeMePresente/OnePage.html
@@ -25,6 +25,7 @@
     <br/>
     <img src="img/Komlan5.JPG" height="550" width="800"/>
 
+    <img src="img/Komlan_Quebec.png"/>
     <img src="img/diplome.jpg" height="526" width="1000"/>
     <p> Je m'appelle komlan </p>
     <br/>
