--- a/JeMePresente/OnePage.html
+++ b/JeMePresente/OnePage.html
@@ -26,6 +26,7 @@
     <img src="img/Komlan5.jpg" height="550" width="800"/>
 
 
+    <img src="img/comique_info.jpg" height="418" width="408"/>
     <img src="img/diplome.jpg" height="526" width="1000"/>
     <p> Je m'appelle komlan </p>
     <br/>
