--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -20,10 +20,10 @@
 <br/>
 <p id="debut">Accueil</p>
 <ol>
-    <a href="#etude"><h1><li>Mes études</li></h1></a>
-    <a href="#Sports"><h1><li>Mes sports</li></h1></a>
-    <a href="#Loisirs"><h1><li>Mes Loisirs </li></h1></a>
-    <a href="#reve"><h1><li>Mon rêve </li></h1></a>
+    <a href="etudes.html"><h1><li>Mes études</li></h1></a>
+    <a href="sports.html"><h1><li>Mes sports</li></h1></a>
+    <a href="loisirs.html"><h1><li>Mes Loisirs </li></h1></a>
+    <a href="reve.html"><h1><li>Mon rêve </li></h1></a>
 
 </ol>
 
