--- a/JeMePresente/OnePage.html
+++ b/JeMePresente/OnePage.html
@@ -23,11 +23,11 @@
 
     <p>Bonjour, je me présente.</p>
     <br/>
-    <img src="img/Komlan5.jpg" height="550" width="800"/>
+    <img src="Medias/Komlan5.jpg" height="550" width="800"/>
 
 
-    <img src="img/comique_info.jpg" height="418" width="408"/>
-    <img src="img/diplome.jpg" height="526" width="1000"/>
+    <img src="Medias/comique_info.jpg" height="418" width="408"/>
+    <img src="Medias/diplome.jpg" height="526" width="1000"/>
     <p> Je m'appelle komlan </p>
     <br/>
     <p>Mes principales caractéristiques sont :</p>
@@ -84,18 +84,18 @@
             <th>Lecture</th>
         </tr>
         <tr>
-            <td><img src="img/enfant.jpeg"></td>
-            <td><img src="img/enfant.jpeg"></td>
-            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
         <tr>
-            <td><img src="img/enfant.jpeg"></td>
-            <td><img src="img/enfant.jpeg"></td>
-            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
         </tr>
         <tr>
-            <td><img src="img/enfant.jpeg"></td>
-            <td><img src="img/enfant.jpeg"></td>
-            <td><img src="img/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
+            <td><img src="Medias/enfant.jpeg"></td>
         </tr>
     </table>
     <p>Cliquez <a target="_blank" href="https://www.voyagevoyage.ca/conseils/stations-ski-afrique-1.1623437">ici</a> pour voir mes autres centres d'intérêts.</p>
