--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -12,7 +12,7 @@
 <body>
 <p>Bonjour, je me présente.</p>
 <br/>
-<img src="img/Komlan5.JPG" height="550" width="800"/>
+<img src="Medias/Komlan5.JPG" height="550" width="800"/>
 
 <p> Je m'appelle komlan </p>
 <br/>
