--- a/JeMePresente/Sports.html
+++ b/JeMePresente/Sports.html
@@ -5,6 +5,7 @@
 
 <html lang="fr-ca" >
 <meta charset="UTF-8">
+<link rel="stylesheet" href="CSS/style.css">
 <title>Sports</title>
 </head>
 <body>
