--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -4,6 +4,7 @@
 <!--Le 8-04-2020-->
 
 <html lang="fr-ca" >
+<head>
 <link rel="stylesheet" href="CSS/style.css">
 <meta charset="UTF-8">
     <title>Présentation </title>
@@ -12,7 +13,7 @@
 <body>
 <p>Bonjour, je me présente.</p>
 <br/>
-<img src="Medias/Komlan5.JPG" height="550" width="800"/>
+<img alt="image" src="Medias/komlan5.JPG"/>
 
 <p> Je m'appelle komlan </p>
 <br/>
@@ -20,12 +21,11 @@
 <br/>
 <p id="debut">Accueil</p>
 <ol>
-    <a href="etudes.html"><h1><li>Mes études</li></h1></a>
-    <a href="sports.html"><h1><li>Mes sports</li></h1></a>
-    <a href="loisirs.html"><h1><li>Mes Loisirs </li></h1></a>
-    <a href="reve.html"><h1><li>Mon rêve </li></h1></a>
+   <li> <h1><a href="etudes.html">Mes études</a></h1></li>
+    <li><h1><a href="sports.html">Mes sports</a></h1></li>
+    <li><h1><a href="loisirs.html">Mes Loisirs </a></h1></li>
+    <li><h1><a href="reve.html">Mon rêve </a></h1></li>
 
 </ol>
-
 </body>
 </html>
