--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -13,7 +13,8 @@
 <body>
 <p>Bonjour, je me présente.</p>
 <br/>
-<img alt="image" src="Medias/komlan5.JPG"/>
+
+<img src="Medias/Albert.jpg" height="2320" width="3088"/>
 
 <p> Je m'appelle komlan </p>
 <br/>
