--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -14,7 +14,7 @@
 <p>Bonjour, je me présente.</p>
 <br/>
 
-<img src="Medias/Albert.jpg" height="2320" width="3088"/>
+<img src="Medias/Albert.jpg" />
 
 <p> Je m'appelle komlan </p>
 <br/>
