--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -18,7 +18,7 @@
 
 <p> Je m'appelle komlan </p>
 <br/>
-<p>Mes principales caractéristiques sont :</p>
+<p>Mes principales caractéristiques sont : oui </p>
 <br/>
 <p id="debut">Accueil</p>
 <ol>
