--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -14,7 +14,7 @@
 <p>Bonjour, je me présente.</p>
 <br/>
 
-<img src="Medias/Marie-Reine.JPG.jpg" />
+<img src="Medias/Komlan.jpg" />
 
 <p> Je m'appelle komlan </p>
 <br/>
