--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -11,14 +11,14 @@
 
 </head>
 <body>
-<p>Bonjour, je me présente.</p>
+<p>Bonjour, je me présente</p>
 <br/>
 
 <img src="KomlanPlage.jpg" />
 
 <p> Je m'appelle komlan </p>
 <br/>
-<p>Mes principales caractéristiques sont : oui </p>
+<p>Mes principales caractéristiques sont: </p>
 <br/>
 <p id="debut">Accueil</p>
 <ol>
