--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -14,9 +14,9 @@
 <p>Bonjour, je me présente</p>
 <br/>
 
-<img src="KomlanPlage.jpg" />
+<img src="KomlanPlage.jpg"  alt="Albert à la plage"/>
 
-<p> Je m'appelle komlan </p>
+<p> Je m'appelle komlan </p>a
 <br/>
 <p>Mes principales caractéristiques sont: </p>
 <br/>
