--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -14,7 +14,7 @@
 <p>Bonjour, je me présente</p>
 <br/>
 
-<img src="KomlanPlage.jpg"  alt="Albert à la plage"/>
+<img src="Komlan4.jpg"  alt="Albert à la plage"/>
 
 <p> Je m'appelle komlan </p>a
 <br/>
