--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -14,7 +14,7 @@
 <p>Bonjour, je me présente</p>
 <br/>
 
-<img src="Medias/Komlan4.jpg"  alt="Albert à la plage"/>
+<img src="Medias/KomlanPlage.jpg" alt="Albert Plage"/>
 
 <p> Je m'appelle komlan </p>a
 <br/>
