--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -14,8 +14,7 @@
 <p>Bonjour, je me présente</p>
 <br/>
 
-
-<img src="Medias/comique_info.jpg"/>
+<img src="Medias/KomlanPlage.jpg"/>
 <p> Je m'appelle komlan </p>a
 <br/>
 <p>Mes principales caractéristiques sont: </p>
