--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -15,7 +15,7 @@
 <br/>
 
 <img src="Medias/KomlanPlage.jpg"/>
-<p> Je m'appelle komlan </p>a
+<p> Je m'appelle komlan Gblokpor-Koffi étudiant au Cegep Trois Rivière</p>
 <br/>
 <p>Mes principales caractéristiques sont: </p>
 <br/>
