--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -25,6 +25,7 @@
     <li><h1><a href="sports.html">Mes sports</a></h1></li>
     <img src="Medias/enfant.jpeg"/>
     <li><h1><a href="loisirs.html">Mes Loisirs </a></h1></li>
+    <img src="Medias/Yoga-Neige.jpg"/>
     <li><h1><a href="reve.html">Mon rêve </a></h1></li>
 
 </ol>
