--- a/JeMePresente/index.html
+++ b/JeMePresente/index.html
@@ -22,12 +22,12 @@
 <p id="debut">Accueil</p>
 <ol>
    <li><h1><a href="etudes.html">Mes études</a></h1></li>
+    <img src="Medias/diplome.jpg"/>
     <li><h1><a href="sports.html">Mes sports</a></h1></li>
     <img src="Medias/enfant.jpeg"/>
     <li><h1><a href="loisirs.html">Mes Loisirs </a></h1></li>
     <img src="Medias/Yoga-Neige.jpg"/>
     <li><h1><a href="reve.html">Mon rêve </a></h1></li>
-
-</ol>
+    <img src="Medias/Komlan4.JPG"/></ol>
 </body>
 </html>
