--- a/JeMePresente/loisirs.html
+++ b/JeMePresente/loisirs.html
@@ -10,10 +10,14 @@
 <body>
 <p id="debut">Accueil</p>
 <ol>
-    <a href="#etude"><h1><li>Informatique</li></h1></a>
-    <a href="#Sports"><h1><li>Lectures </li></h1></a>
-    <a href="#Loisirs"><h1><li>Voyage</li></h1></a>
-    <a href="#reve"><h1><li>Film</li></h1></a>
+    <li><h1><a href="#etude">Informatique</a></h1></li>
+    <li><h1><a href="#Sports">Sports</a></h1></li>
+    <li><h1><a href="#Loisirs">Voyage</a></h1></li>
+    <li><h1><a href="#reve">Film</a></h1></li>
+
+
+
+
 
 </ol>
 <a href="index.html"> Retour au début </a>
