--- a/JeMePresente/etudes.html
+++ b/JeMePresente/etudes.html
@@ -4,6 +4,8 @@
 <!--Le 20-04-2020-->
 
 <html lang="fr-ca" >
+<head>
+    <link rel="stylesheet" href="CSS/style.css">
 <meta charset="UTF-8">
 <title>Études </title>
 </head>
