--- a/JeMePresente/reve.html
+++ b/JeMePresente/reve.html
@@ -2,6 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Reve</title>
 </head>
 <body>
