--- a/JeMePresente/loisirs.html
+++ b/JeMePresente/loisirs.html
@@ -5,7 +5,7 @@
 
 <html lang="fr-ca" >
 <head>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 <meta charset="UTF-8">
 <title>Loisirs</title>
 </head>
