--- a/JeMePresente/onePageClasses.html
+++ b/JeMePresente/onePageClasses.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<!--index.html-->
+<!--onePageClasses.html-->
 <!--Par Komlan Albert Gblokpor-Koffi-->
-<!--Le 8-04-2020-->
+<!--Le 29-04-2020-->
 
 <html lang="fr-ca" >
 <head>
-<link rel="stylesheet" href="css/style.css">
-<meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styleClasses.css">
     <title>Présentation </title>
+    <div>
+        <div id="changementCouleur1">
+
+        </div>
+        <div id="changementCouleur2">
+
+        </div>
+    </div>
 
 </head>
 <body>
@@ -21,7 +30,7 @@
 <img src="Medias/Escalier.jpg"/><br/>
 <p id="debut">Accueil</p>
 <ol>
-   <li><h1><a href="etudes.html">Mes études</a></h1></li>
+    <li><h1><a href="etudes.html">Mes études</a></h1></li>
     <img src="Medias/diplome.jpg"/>
     <li><h1><a href="sports.html">Mes sports</a></h1></li>
     <img src="Medias/enfant.jpeg"/>
