--- a/JeMePresente/sports.html
+++ b/JeMePresente/sports.html
@@ -5,7 +5,7 @@
 
 <html lang="fr-ca" >
 <meta charset="UTF-8">
-<link rel="stylesheet" href="CSS/style.css">
+<link rel="stylesheet" href="css/style.css">
 <title>Sports</title>
 </head>
 <body>
