--- a/JeMePresente/onePageClasses.html
+++ b/JeMePresente/onePageClasses.html
@@ -8,35 +8,40 @@
 
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styleClasses.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Font+Name">
     <title>Présentation </title>
-    <div>
-        <div id="changementCouleur1">
 
-        </div>
-        <div id="changementCouleur2">
-
-        </div>
-    </div>
 
 </head>
 <body>
 <p>Bonjour, je me présente</p>
 <br/>
 
-<img src="Medias/KomlanPlage.jpg"/>
+<img src="Medias/KomlanPlage.jpg" class="belleImage" alt="Moi même à la lage de Lomé"/>
 <p> Je m'appelle komlan Gblokpor-Koffi étudiant au Cegep Trois Rivière</p>
+<h2>Mes préférence </h2>
+<h2>Mes habitudes </h2>
+<h2>Mes modes de vie </h2>
+<h2>Mes styles vestimentaires </h2>
 <br/>
 <p>Mes principales caractéristiques sont: </p>
-<img src="Medias/Escalier.jpg"/><br/>
+<img src="Medias/Escalier.jpg" class="belleImage" alt="Escalier du Séminaire de Québec"/><br/>
 <p id="debut">Accueil</p>
 <ol>
-    <li><h1><a href="etudes.html">Mes études</a></h1></li>
-    <img src="Medias/diplome.jpg"/>
-    <li><h1><a href="sports.html">Mes sports</a></h1></li>
-    <img src="Medias/enfant.jpeg"/>
-    <li><h1><a href="loisirs.html">Mes Loisirs </a></h1></li>
-    <img src="Medias/Yoga-Neige.jpg"/>
-    <li><h1><a href="reve.html">Mon rêve </a></h1></li>
-    <img src="Medias/Komlan4.JPG"/></ol>
+    <li id="changementCouleur1"><h1 class="albert"><a href="etudes.html">Mes études</a></h1>
+        <img src="Medias/diplome.jpg" class="belleImage"/>
+    </li>
+
+    <li id="changementCouleur2"><h1 class="albert"><a href="sports.html">Mes sports</a></h1>
+        <img src="Medias/enfant.jpeg" class="belleImage"/>
+    </li>
+
+    <li id="changementCouleur3"><h1 class="albert"><a href="loisirs.html">Mes Loisirs </a></h1>
+        <img src="Medias/Yoga-Neige.jpg" class="belleImage"/>
+    </li>
+    <li id="changementCouleur4"><h1 class="albert"><a href="reve.html">Mon rêve </a></h1>
+        <img src="Medias/Komlan4.JPG" class="belleImage"/>
+    </li>
+    </ol>
 </body>
 </html>
