--- a/Han Solo/index.html
+++ b/Han Solo/index.html
@@ -14,11 +14,11 @@
 
 <header>
     <h1>Han Solo</h1>
-    <!-- Insérer l'image d'HanSolo ici -->
+    <!-- Insérer l'image d'Han Solo ici -->
    <a href="https://fr.wikipedia.org/wiki/Han_Solo" target="_blank"><img src="img/Han Solo.jpg"/></a>
     <!-- Faire le menu onepage ici -->
     <a href="#presentation"><h4>Visiter la section présentation</h4></a>
-    <a href="#presentation"><h4>Visiter la section filmographie</h4></a>
+    <a href="#filmographie"><h4>Visiter la section filmographie</h4></a>
 
 </header>
 
