--- a/Han Solo/index.html
+++ b/Han Solo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- index.html -->
-<!-- Par Shany Carle -->
-<!-- Le 2017-05-04 STAR WARS DAY!!!!! -->
+<!-- Par Komlan Albert Gblokpor-Koffi -->
+<!-- Le 2020-04-30 -->
 <html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
