--- a/Examen1 /Examen1/index.html
+++ b/Examen1 /Examen1/index.html
@@ -6,8 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="css/style.css">
 </head
 <body>
 
@@ -15,7 +14,7 @@
     <h1>Le Mandalorien</h1>
     <!-- Insérer l'image du mandalorien ici -->
     <a target="_blank" href="https://fr.wikipedia.org/wiki/Mandalorien">
-    <img src="img/mandalorien.jpg"/>
+    <img src="../Examen1/img/mandalorien.jpg"/>
     </a>
     <!-- Faire le menu onepage ici -->
     <a href="#presentation"><h4>Visiter la section présentation</h4></a>
@@ -59,7 +58,8 @@
 <h3>COMPAGNON</h3>
     <p>Son compagnon n'a pas de nom et ressemble étrangement à yoda.</p>
 <!-- Insérer l'image du bébé yoda ici -->
-    <img src="img/baby-yoda.jpg" width="50%"/>
+    <img src="../Examen1/img/baby-yoda.jpg" width="50%"/>
+
 </section>
 <section id="filmographie">
 <ul>
