--- a/Han Solo/index.html
+++ b/Han Solo/index.html
@@ -22,6 +22,41 @@
 
 </header>
 
+<div class="row">
+       <div class="col-md-6   fondvert" > section d'essai </div>
+       <div class="col-md-2   fondvert" > section d'essai </div>
+       <div class="col-md-2   fondvert" > section d'essai </div>
+       <div class="col-md-2   fondvert" > section d'essai </div>
+       <div class="col-md-2 offset-md-7  fondvert" > section d'essai </div>
+       <div class="col-md-2  fondvert" > section d'essai </div>
+
+   </div>
+
+
+   <hr>
+   <div class="container-fluid">
+       <div class="row">
+           <div class="row">
+               <div class="col-md-6 fondvert" > section d'essai </div>
+               <div class="col-md-2 fondRouge" > section d'essai </div>
+               <div class="col-md-2 fondJaune " > section d'essai </div>
+               <div class="col-md-2 fondvert" > section d'essai </div>
+               <div class="col-md-2 offset-md-7 fondBleu" > section d'essai </div>
+               <div class="col-md-2 fondvert"> section d'essai </div>
+           </div>
+       </div>
+
+   </div>
+   <hr>
+
+   .witcherBanniere{
+    background-image: url("../img/witcherBanniere.jpg");
+    background-repeat: no-repeat;
+    background-color: black;
+    margin:auto;
+    padding:27rem;
+    background-size:cover;
+}
 
 
 
