--- a/Examen2/index.html
+++ b/Examen2/index.html
@@ -44,7 +44,7 @@
 <!-- Ici commence le troisième container - présentation des jeux- -->
 <div class="container">
     <div class="row">
-        <div class=" col-12 col-md-3  col-lg-3 col-xl-3 fondJaune"> roisième section 3x avec un vide à droite </div>
+        <div class=" col-12 col-md-3  col-lg-3 col-xl-3 fondJaune"> Troisième section 3x avec un vide à droite </div>
     </div>
     <hr>
     <!-- code àa revoir surtout au niveau de lg. - -->
@@ -52,7 +52,7 @@
     <div class="row">
         <div class=" col-12 col-md-6  col-lg-4 col-xl-4 fondJaune">Troisième section 4x</div>
         <div class=" col-12 col-md-6 col-lg-4 offset-lg-4 col-xl-4 offset-xl-4 fondRouge">Troisième section 4x</div>
-        <div class=" col-12 col-md-4 offset-md-4 col-lg-4 col-xl-4 fondJaune">QQTroisième section 4x</div>
+        <div class=" col-12 col-md-4 offset-md-4 col-lg-4 col-xl-4 fondJaune">Troisième section 4x</div>
     </div>
 </div>
 <!-- Ici commence le quatrieme container - présentation des livres - -->
